# radar-drone-vision

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.worker  Makefile  PR-D-16-01875R1.docx  README.md  counter-uas-radar-carrier-complete.md  docker-compose.yml  drone-carrier-launch-station-claude.md  drone-show-safe-flightlog-reconstruction-claude.md  drone-show-studio-claude-implementation.md  drone-show-studio-master-claude-implementation.md  pyproject.toml  radar-drone-vision-claude-code.md  requirements.txt
addons/radar_drone_vision/: __manifest__.py
configs/: default.yaml  odoo.conf
configs/datasets/: zenodo77.yaml
configs/hardware/: generic_iq.yaml  infineon.yaml  ti_mmwave.yaml
configs/models/: cnn.yaml  sra.yaml
data/reports/: roc_comparison.json
notebooks/: 01_dataset_exploration.ipynb  02_micro_doppler_visualization.ipynb  03_sra_reproduction.ipynb  04_hardware_alignment.ipynb
samples/obstacles/: balloon_left.json  building_right.json
samples/scene_dsl/: 200_drones_ip.yaml  20_drones_star.yaml  50_drones_logo.yaml
scripts/: download_zenodo.py  evaluate.py  export_report.py  generate_demo_data.py  generate_icons.py  live_capture.py  post_odoo_preferences.py  precompute_roc.py  prepare_dataset.py  render_airspace.py  train_cnn.py  train_enhanced.py  train_sra.py
src/radar_drone_vision.egg-info/: PKG-INFO  (+3 more)
tests/: test_complex_log_fft.py  test_dataset_loader.py  test_hardware_simulator.py  test_metrics.py  test_sra.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+199 files in other folders)
