[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-drone-vision"
version = "0.1.0"
description = "Low-altitude radar AI validation platform for UAV / bird discrimination using micro-Doppler signatures"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CoolCold Tech", email = "chun.min.hung@gmail.com"},
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",
    "torch>=2.0",
    "torchaudio>=2.0",
    "torchvision>=0.15",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "pydantic>=2.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24",
    "joblib>=1.3",
    "pyyaml>=6.0",
    "omegaconf>=2.3",
    "tqdm>=4.65",
    "requests>=2.31",
    "pyserial>=3.5",
    "onnx>=1.14",
    "onnxruntime>=1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.5",
]
notebook = [
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120
